# InSPEcT

./: .gitignore  README.md  main.py  patch_soft_prompts.sh  pyproject.toml  requirements.txt  test_llm_inference.py  train_prompts.sh
scripts/: calculate_scores.py  create_patching_outputs.py  visualize_interpretability_smoothness.py  visualize_src_tgt_smoothness_curve.py
src/: constants.py  scoring.py  utils.py
src/patchscopes/: layers.py  patch_layers.py  prompt_patching.py  target_prompt.py
src/prompt_tuning/: prompt_tuning.py
