[project]
name = "inspect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "nltk>=3.9.2",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "rouge-score>=0.1.2",
    "textstat>=0.7.12",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
